<resources>
    <string name="app_name">Balina Soft Test</string>
    <string name="photos">Photos</string>
    <string name="map">Map</string>
    <string name="open_camera">Open Camera</string>
    <string name="message">Message</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="sign_up">Sign up</string>
    <string name="list_empty">List Empty</string>
    <string name="got_error">Got error</string>
    <string name="delete">Delete</string>
    <string name="do_you_really_wanna_delete_it">Do you really wanna delete it</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="forbidden">Forbidden</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="login_common_error">Lowercase Latin, numbers and some symbols (_ - . @) are available. The login length must be from 4 to 32 characters.</string>
    <string name="login_pattern_error">Lowercase Latin, numbers and some symbols (_ - . @) are available.</string>
    <string name="login_range_error">The login length must be from 4 to 32 characters.</string>
    <string name="password_range_error">The password length must be from 8 to 500 characters.</string>
    <string name="sign_error">Login or password is incorrect</string>
    <string name="repeat_password_error">The password is not repeated</string>
    <string name="signup_login_error">Login Already in use</string>
    <string name="we_need_your_location">We need your location</string>
    <string name="the_file_is_too_big">The file is too big</string>
    <string name="the_file_is_too_small">The file is too small</string>


</resources>