<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/rl_space"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="24.dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login"
            android:layout_width="match_parent"
            android:hint="@string/login"
            android:minHeight="90dp"
            style="?attr/textInputFilledStyle"
            app:boxBackgroundColor="@color/transparent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:hint="@string/password"
            style="?attr/textInputFilledStyle"
            app:boxBackgroundColor="@color/transparent"
            android:minHeight="90dp"
            app:endIconMode="password_toggle"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_login"
            android:layout_width="match_parent"
            app:cornerRadius="3dp"
            android:textAppearance="?attr/textAppearanceButton"
            android:text="@string/log_in"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>