<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_types"
        style="@style/Widget.Material3.TabLayout.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abl_app_bar"
        android:layout_marginTop="-1.dp"
        android:background="?attr/colorPrimary"
        app:tabIconTint="?attr/colorOnPrimary"
        app:tabIndicatorColor="?attr/colorOnPrimary"
        app:tabTextColor="?attr/colorOnPrimary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </com.google.android.material.tabs.TabLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tl_types">

        <RelativeLayout
            android:id="@+id/rl_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24.dp"
            app:layout_constraintTop_toBottomOf="@id/rl_space">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:minHeight="90dp"
                app:boxBackgroundColor="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:minHeight="90dp"
                app:boxBackgroundColor="@color/transparent"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_repeat"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_repeat"
                android:minHeight="90dp"
                app:boxBackgroundColor="@color/transparent"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAppearance="?attr/textAppearanceButton"
                app:cornerRadius="3dp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_common_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_types"
        android:layout_margin="16.dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_common_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16.dp"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?attr/colorError"
            tools:text="TVV" />

    </com.google.android.material.card.MaterialCardView>


    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_40"
        android:clickable="true">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:contentPadding="16dp">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>


</RelativeLayout>